# qcosignal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  myobject.cpp  myobject.h  qcosignal.hpp
